# Ship-Classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  dvc.yaml  model.py  params.yaml  pyproject.toml  requierments.txt  requirements.txt  scores.json  template.py  test.py  train_status.json
.github/workflows/: ci-cd.yml
notebook/: g_drive.ipynb
src/components/: base_model.py  data_ingestion.py  model_evaluation.py  model_trainer.py
src/constants/: __init__.py
src/data_access/: g_drive.py
src/entity/: config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction.py  training_pipline.py
src/utils/: main_utils.py
templates/: index.html
tests/: test_app.py
